<resources>
    <string name="app_name">StarWarsApp</string>

    <!-- MENU -->
    <string name="order_by_name">Order by name</string>
    <string name="order_by_birth">Order by birth</string>
    <string name="order_by_favourite">Order by favourite</string>
    <string name="order_elements">Order elements</string>

    <!-- DETAIL SCREEN -->
    <string name="director">Director: </string>
    <string name="producer">Producer: </string>
    <string name="born">Born: </string>
    <string name="gender">Gender: </string>
    <string name="hair_color">Hair color: </string>
    <string name="skin">Skin: </string>
    <string name="height">Height: </string>
    <string name="homeworld">Homeworld: </string>
    <string name="vehicles">Vehicles</string>
    <string name="films">Films: </string>

    <!-- PATH ANIMATION -->
    <string name="heart_empty_path">M32.95,19 C31.036,19 29.199,19.8828338 28,21.2724796 C26.801,19.8828338 24.964,19 23.05,19 C19.6565,19 17,21.6321526 17,24.9945504 C17,29.1089918 20.74,32.4713896 26.405,37.5667575 L28,39 L29.595,37.5667575 C35.26,32.4713896 39,29.1089918 39,24.9945504 C39,21.6321526 36.3435,19 32.95,19 L32.95,19 Z M28.1155,35.9536785 L28,36.0572207 L27.8845,35.9536785 C22.654,31.2506812 19.2,28.1444142 19.2,24.9945504 C19.2,22.8201635 20.8555,21.1798365 23.05,21.1798365 C24.744,21.1798365 26.394,22.2643052 26.9715,23.7520436 L29.023,23.7520436 C29.606,22.2643052 31.256,21.1798365 32.95,21.1798365 C35.1445,21.1798365 36.8,22.8201635 36.8,24.9945504 C36.8,28.1444142 33.346,31.2506812 28.1155,35.9536785 L28.1155,35.9536785 Z</string>
    <string name="heart_full_path">M28,39 L26.405,37.5667575 C20.74,32.4713896 17,29.1089918 17,24.9945504 C17,21.6321526 19.6565,19 23.05,19 C24.964,19 26.801,19.8828338 28,21.2724796 C29.199,19.8828338 31.036,19 32.95,19 C36.3435,19 39,21.6321526 39,24.9945504 C39,29.1089918 35.26,32.4713896 29.595,37.5667575 L28,39 L28,39 Z</string>
    <string name="heart_hidden">M18,38 C18,38 24,38 24,38 C24,38 32,38 32,38 C32,38 38,38 38,38 L38,38 L18,38 L18,18 Z</string>
    <string name="heart_mid">M18,26 C18,26 21,28 24,28 C27,28 29,25 32,25 C35,25 38,26 38,26 L38,38 L18,38 L18,26 Z</string>
    <string name="heart_shown">M18,18 C18,18 24,18 24,18 C24,18 32,18 32,18 C32,18 38,18 38,18 L38,38 L18,38 L18,18 Z</string>

</resources>
