<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    tools:context=".people.PeopleActivity">

    <item
        android:id="@+id/order_by_name"
        android:orderInCategory="100"
        android:title="@string/order_by_name"

        app:showAsAction="never" />

    <item
        android:id="@+id/order_by_birth"
        android:orderInCategory="200"
        android:title="@string/order_by_birth"
        app:showAsAction="never" />

    <item
        android:id="@+id/order_by_favourite"
        android:orderInCategory="300"
        android:title="@string/order_by_favourite"
        app:showAsAction="never" />

</menu>